Issues/731 restriction text overflow (#962)
For #731 

* prevent restriction descriptor from overflowing border

--- a/src/components/page-my-issuances/create-issuance/issuance-confirm/issuance-confirm.less
+++ b/src/components/page-my-issuances/create-issuance/issuance-confirm/issuance-confirm.less
@@ -13,6 +13,14 @@ issuance-confirm {
 		color: @gray;
 	}
 	.dl-stripped {
+    dt, dd {
+      height: unset;
+      min-height: 30px;
+    }
+    dt::before, dd::before, dt::after, dd::after {
+      content: unset;
+      display: unset;
+    }
 		.restriction-levels {
 			border-bottom: 0;
 			font-size: @font-size-small;
@@ -20,15 +28,16 @@ issuance-confirm {
 			.icon {
 				float: left;
 				font-size: 24px;
-				margin-right: 10px;
+        margin-right: 10px;
+        margin-bottom: 24px;
 			}
 			.restriction-info {
 				color: @gray;
-	
+
 			}
 		}
 	}
-	
+
 	hr {
 		border-top: @border-default;
 	}
